--- a/aDVanceERP.Desktop/MVP/Vistas/ContenedorEstadisticas/VistaContenedorEstadísticas.resx
+++ b/aDVanceERP.Desktop/MVP/Vistas/ContenedorEstadisticas/VistaContenedorEstadísticas.resx
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
-    Microsoft ResX Schema 
+    Microsoft ResX Schema
 
     Version 2.0
 
@@ -48,7 +48,7 @@
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
@@ -135,7 +135,7 @@
         vlj/vbxGXncLjfgDrMwMyzQ+akoAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnImprimirAnalisisVentas.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnDescargarAnálisisVentas.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAATJJREFUOE+9
         1L9KXUEQx/GP/xoR1KiIWlpYGKzSGUO0EK18CUG09hFCRKOQt/AtbLVPo6Y2KmglGqwSBvbAMtx7Rbn4
