--- a/aDVanceERP.Core.ClienteFTP/MVP/Vistas/VistaConfServidorFTP.resx
+++ b/aDVanceERP.Core.ClienteFTP/MVP/Vistas/VistaConfServidorFTP.resx
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
-    Microsoft ResX Schema 
+    Microsoft ResX Schema
 
     Version 2.0
 
@@ -48,7 +48,7 @@
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
@@ -117,22 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="formatoBase.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="fieldPassword.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldServidor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAATZJREFUOE+9
-        k7FKA0EQhlMq6gPYKKjvoGJroWUKX8vKTmwULXwEU9hImp0N7s5t3NkzJBptLATb2MifS4K3cOYOznzw
-        w/DPP8PecttoLBrn3Gpq9B5kjFmJ+5VIbWdfmN6EaTTRMDjajXOlGLbby8L0KkznOKX3D2uB9YUwDfr9
-        +6U4PxefqANh+sbiqYdPhoeT59Ml8JZOhOkj9uGhF/uFBKu2hHXzyapTSegLw78Fb9xj3UQ2ns8hVh3j
-        8j3TC+5KEv0uTL2cMm8wyYy800fxnhnC+hKK/SKE1dWf+ZDQrVh1FvtFIIuZ2J/xrwu7XVp/dnonqzub
-        PUcbqOGhh7rSQrF0I0yP45p1S5juspqMT+g6y1RYWPsJy7D4hbX/h9OXEpg+y2juSwEp03aw6rCMkI3n
-        a+cHfZCTUhKsl+EAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUhJREFUOE+1
+        lEtKxEAQhgf0BD4OIIIKLly4VwTBAwxewQt4EVFPkUvE2QiZrgS7q0NSHdzoQkFxwL2MVMiEpCbOo3F+
+        +CFU/fnoB9W93qqVpo8bmY0vcgOXs8yZLIs25f8tZU/RHiG8E8IHITzPMWc+ycCB5NQio+4dQjgOgjXZ
+        k+IMoRoQwq3s1XIWAoYSwRYh6I5VTazLDC/AQiA5tSbAIh0eEsKYEK6dia+a5hr3ysyywCJJtmWGa95A
+        hzByCF/CI3+gVn1n1HnLWvW9gf+25Vyr/epS/nSZWRTI32STo8zEx13mXplZBthUGIbrbFn3AvK8EsIr
+        IbzwnDd7XsDqPH/YPOvNnheQVZjhqTPJiazPBZKN73KMHxZ5HPhM+XFwCDeyV6tA2K2er++OCWmZM4Tw
+        lutoR3Ja4kvILZxNTYgwZ+QlrUS/UcdIkuztj9sAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="fieldNombreUsuario.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldNombreUsuario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAZVJREFUOE+9
         lD9LHFEUxdc2SkgXbU1hArZRO5VIJB8gEFIEbEK0F+xS+BVEtNJSkiJJGQwpUi37zovMu2/Wd9/gH1LY
@@ -144,15 +141,15 @@
         XOjWgvLWL0xK+kYgfM9cbVbP9eXk4OBRPTGTh2TmpKQXTef+K7fsUGlhlz1hxgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="fieldServidor.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldPassword.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUhJREFUOE+1
-        lEtKxEAQhgf0BD4OIIIKLly4VwTBAwxewQt4EVFPkUvE2QiZrgS7q0NSHdzoQkFxwL2MVMiEpCbOo3F+
-        +CFU/fnoB9W93qqVpo8bmY0vcgOXs8yZLIs25f8tZU/RHiG8E8IHITzPMWc+ycCB5NQio+4dQjgOgjXZ
-        k+IMoRoQwq3s1XIWAoYSwRYh6I5VTazLDC/AQiA5tSbAIh0eEsKYEK6dia+a5hr3ysyywCJJtmWGa95A
-        hzByCF/CI3+gVn1n1HnLWvW9gf+25Vyr/epS/nSZWRTI32STo8zEx13mXplZBthUGIbrbFn3AvK8EsIr
-        IbzwnDd7XsDqPH/YPOvNnheQVZjhqTPJiazPBZKN73KMHxZ5HPhM+XFwCDeyV6tA2K2er++OCWmZM4Tw
-        lutoR3Ja4kvILZxNTYgwZ+QlrUS/UcdIkuztj9sAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAATZJREFUOE+9
+        k7FKA0EQhlMq6gPYKKjvoGJroWUKX8vKTmwULXwEU9hImp0N7s5t3NkzJBptLATb2MifS4K3cOYOznzw
+        w/DPP8PecttoLBrn3Gpq9B5kjFmJ+5VIbWdfmN6EaTTRMDjajXOlGLbby8L0KkznOKX3D2uB9YUwDfr9
+        +6U4PxefqANh+sbiqYdPhoeT59Ml8JZOhOkj9uGhF/uFBKu2hHXzyapTSegLw78Fb9xj3UQ2ns8hVh3j
+        8j3TC+5KEv0uTL2cMm8wyYy800fxnhnC+hKK/SKE1dWf+ZDQrVh1FvtFIIuZ2J/xrwu7XVp/dnonqzub
+        PUcbqOGhh7rSQrF0I0yP45p1S5juspqMT+g6y1RYWPsJy7D4hbX/h9OXEpg+y2juSwEp03aw6rCMkI3n
+        a+cHfZCTUhKsl+EAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
